--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
     <title></title>
   </head>
@@ -8,6 +9,9 @@
     <div id ="container">
   <div id ="animate"></div>
 </div>
-<p><button onclick="myMove()">Click Me</button></p> 
+<p><button id ="myMove">Click Me</button></p>
+<script type="text/javascript" src="index.js">
+
+</script>
   </body>
 </html>
